# ephemeris-discord-bot

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  discord_data.db  docker-compose.yml  example.env  firstTimeSetup.sh  main.py  pyproject.toml  requirements.txt  run.sh  setup.py  test.json
ephemeris/: __main__.py
ephemeris/Ephemeris/: Ephemeris.py  VariableSolver.py  ephemeris_njit_funcs.py  variables.json
ephemeris/UpdateWebServer/: newRefTimes.json  varUpdateWS.py
ephemeris/discordBot/: __init__.py  bot.py  commonImports.py  guildLunarMenus.py  guildMenuCommands.py  guildScrollMenus.py  guildWhiteList.json  helperFuncs.py  miscCommands.py  usageGraphs.py  userInstallLunarMenus.py  userInstallMenuCommands.py  userInstallScrollMenus.py  userWhiteList.json  variables.py
ephemeris/discordBot/configFiles/: bot_DB.db  dataBase.py  usageDataBase.py  variables.py
src/: Ephemeris.py  VariableSolver.py  variables.json
src/Ephemeris/: Ephemeris.py  VariableSolver.py  variables.json
src/Ephemeris/sampleData/glows/: WhiteBlackSamples.json  WhiteGreenSamples.json  WhiteRedSamples.json
src/discordBot/: PersistentViewBot  __init__.py  guildSettings.json  guildWhiteList.json  helperFuncs.py  userWhiteList.json
src/sampleData/dims/: ShadowWhite.json
src/sampleData/glows/: WhitePurpleSamples.json  WhiteYellowSamples.json
