[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ephemeris"
dynamic = ["version"]

requires-python = ">= 3.8"
dependencies = [
    "discord.py@git+https://github.com/Rapptz/discord.py.git#egg=feature/user_apps",
    "numpy==1.26.4",
    "python-dotenv==1.0.1",
    "regex==2024.4.28",
    "Flask==3.0.3",
    "Flask-Cors==4.0.1",
    "waitress==3.0.0",
    "num2words==0.5.13",
    "peewee==3.17.6",
    "black",
    "pre_commit"
]

readme = "README.md"
license = {file = "LICENSE"}
keywords = ["aberoth", "solar system", "orbs", "ephemeris"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black", "pre_commit"]

[project.scripts]
ephemeris = "ephemeris:main"
